--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     <title>Free Online QR Code Generator</title>
   </head>
   <body>
-    <header class="p-4 mb-10 bg-blue-500">
+<!--     <header class="p-4 mb-10 bg-blue-500">
       <div class="max-w-5xl m-auto">
         <div class="text-xl font-bold text-white">QR Code Generator</div>
       </div>
-    </header>
+    </header> -->
     <img src="img/spinner.svg" alt="" />
     <main>
       <div
